[package]
name = "lumitune"
version = "0.1.0"
description = "A lightweight desktop wrapper for Apple Music Web with tray controls and floating overlay."
authors = ["MaMengyuan"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }
